clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__931004_12.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/931004-12.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn f(%arg0: s32i, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %62 = alloca s32i, "n", align 4
        %63 = alloca rec_tiny, "x", align 1
        %64 = alloca s32i, "i", align 4
        %65 = alloca rec___va_list_tag[1], "ap", align 16
        store %arg0, %62
        %66 = cast(array_to_ptrdecay) %65 : rec___va_list_tag*
        va_start %66
        scope {
            %75 = const 0 : s32i
            store %75, %64, align 4
            for cond: {
                %105 = load %64 : s32i, align 4
                %106 = load %62 : s32i, align 4
                %107 = cmp lt %105, %106 : bool
                condition %107
            } step: {
                %76 = load %64 : s32i, align 4
                %77 = inc %76 : s32i [nsw]
                store %77, %64, align 4
                yield
            } do {
                scope {
                    %78 = alloca rec_tiny, "vaarg.tmp", align 1
                    %79 = cast(array_to_ptrdecay) %65 : rec___va_list_tag*
                    %80 = va_arg %79 : rec_tiny
                    store %80, %78, align 1
                    copy %63, %78
                    scope {
                        %97 = get_member %63[0] "c" : s8i*
                        %98 = load %97 : s8i, align 1
                        %99 = cast(integral) %98 : s32i
                        %100 = load %64 : s32i, align 4
                        %101 = const 10 : s32i
                        %102 = add %100, %101 : s32i [nsw]
                        %103 = cmp ne %99, %102 : bool
                        if %103 {
                            %104 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    scope {
                        %89 = get_member %63[1] "d" : s8i*
                        %90 = load %89 : s8i, align 1
                        %91 = cast(integral) %90 : s32i
                        %92 = load %64 : s32i, align 4
                        %93 = const 20 : s32i
                        %94 = add %92, %93 : s32i [nsw]
                        %95 = cmp ne %91, %94 : bool
                        if %95 {
                            %96 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    scope {
                        %81 = get_member %63[2] "e" : s8i*
                        %82 = load %81 : s8i, align 1
                        %83 = cast(integral) %82 : s32i
                        %84 = load %64 : s32i, align 4
                        %85 = const 30 : s32i
                        %86 = add %84, %85 : s32i [nsw]
                        %87 = cmp ne %83, %86 : bool
                        if %87 {
                            %88 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        scope {
            %68 = alloca s64i, "x", align 8
            %69 = cast(array_to_ptrdecay) %65 : rec___va_list_tag*
            %70 = va_arg %69 : s64i
            store %70, %68, align 8
            scope {
                %71 = load %68 : s64i, align 8
                %72 = const 123 : s64i
                %73 = cmp ne %71, %72 : bool
                if %73 {
                    %74 = get_global @abort : (() -> void)*
                    call @abort() [all]
                    yield
                }
                yield
            }
            yield
        }
        %67 = cast(array_to_ptrdecay) %65 : rec___va_list_tag*
        va_end %67
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca rec_tiny, "coerce", align 4
    %1 = alloca rec_tiny, "coerce", align 4
    %2 = alloca rec_tiny, "coerce", align 4
    %3 = alloca s32i, "__retval", align 4
    %4 = alloca rec_tiny[3], "x", align 1
    %5 = const 0 : s32i
    store %5, %3
    %6 = const 10 : s8i
    %7 = const 0 : s64i
    %8 = get_element %4[%7] : rec_tiny*
    %9 = get_member %8[0] "c" : s8i*
    store %6, %9, align 1
    %10 = const 11 : s8i
    %11 = const 1 : s64i
    %12 = get_element %4[%11] : rec_tiny*
    %13 = get_member %12[0] "c" : s8i*
    store %10, %13, align 1
    %14 = const 12 : s8i
    %15 = const 2 : s64i
    %16 = get_element %4[%15] : rec_tiny*
    %17 = get_member %16[0] "c" : s8i*
    store %14, %17, align 1
    %18 = const 20 : s8i
    %19 = const 0 : s64i
    %20 = get_element %4[%19] : rec_tiny*
    %21 = get_member %20[1] "d" : s8i*
    store %18, %21, align 1
    %22 = const 21 : s8i
    %23 = const 1 : s64i
    %24 = get_element %4[%23] : rec_tiny*
    %25 = get_member %24[1] "d" : s8i*
    store %22, %25, align 1
    %26 = const 22 : s8i
    %27 = const 2 : s64i
    %28 = get_element %4[%27] : rec_tiny*
    %29 = get_member %28[1] "d" : s8i*
    store %26, %29, align 1
    %30 = const 30 : s8i
    %31 = const 0 : s64i
    %32 = get_element %4[%31] : rec_tiny*
    %33 = get_member %32[2] "e" : s8i*
    store %30, %33, align 1
    %34 = const 31 : s8i
    %35 = const 1 : s64i
    %36 = get_element %4[%35] : rec_tiny*
    %37 = get_member %36[2] "e" : s8i*
    store %34, %37, align 1
    %38 = const 32 : s8i
    %39 = const 2 : s64i
    %40 = get_element %4[%39] : rec_tiny*
    %41 = get_member %40[2] "e" : s8i*
    store %38, %41, align 1
    %42 = const 3 : s32i
    %43 = const 0 : s64i
    %44 = get_element %4[%43] : rec_tiny*
    %45 = const 1 : s64i
    %46 = get_element %4[%45] : rec_tiny*
    %47 = const 2 : s64i
    %48 = get_element %4[%47] : rec_tiny*
    %49 = const 123 : s64i
    %50 = load %44 : rec_tiny, align 1
    %51 = load %46 : rec_tiny, align 1
    %52 = load %48 : rec_tiny, align 1
    store %50, %2
    %53 = cast(bitcast) %2 : u24*
    %54 = load %53 : u24
    store %51, %1
    %55 = cast(bitcast) %1 : u24*
    %56 = load %55 : u24
    store %52, %0
    %57 = cast(bitcast) %0 : u24*
    %58 = load %57 : u24
    call @f(%42, %54, %56, %58, %49) [all]
    %59 = get_global @exit : ((s32i) -> void)*
    %60 = const 0 : s32i
    call @exit(%60) [all]
    %61 = load %3 : s32i
    return %61
}
