clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__931004_14.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/931004-14.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn f(%arg0: s32i, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %74 = alloca s32i, "n", align 4
        %75 = alloca rec_tiny, "x", align 1
        %76 = alloca s32i, "i", align 4
        %77 = alloca rec___va_list_tag[1], "ap", align 16
        store %arg0, %74
        %78 = cast(array_to_ptrdecay) %77 : rec___va_list_tag*
        va_start
        scope {
                %87 = const 0 : s32i
                store %87, %76, align 4
                for cond {
                        %125 = load %76 : s32i, align 4
                        %126 = load %74 : s32i, align 4
                        cmp
                        condition %127
                } step {
                        %88 = load %76 : s32i, align 4
                        inc
                        store %89, %76, align 4
                        yield
                } body {
                        scope {
                                %90 = alloca rec_tiny, "vaarg.tmp", align 1
                                %91 = cast(array_to_ptrdecay) %77 : rec___va_list_tag*
                                va_arg
                                store %92, %90, align 1
                                copy
                                scope {
                                        get_member
                                        %118 = load %117 : s8i, align 1
                                        %119 = cast(integral) %118 : s32i
                                        %120 = load %76 : s32i, align 4
                                        %121 = const 10 : s32i
                                        %122 = add %120, %121 : s32i [nsw]
                                        cmp
                                        if %123 {
                                                %124 = get_global @abort : () -> void*
                                                call @abort() [all]
                                                yield
                                        }
                                        yield
                                }
                                scope {
                                        get_member
                                        %110 = load %109 : s8i, align 1
                                        %111 = cast(integral) %110 : s32i
                                        %112 = load %76 : s32i, align 4
                                        %113 = const 20 : s32i
                                        %114 = add %112, %113 : s32i [nsw]
                                        cmp
                                        if %115 {
                                                %116 = get_global @abort : () -> void*
                                                call @abort() [all]
                                                yield
                                        }
                                        yield
                                }
                                scope {
                                        get_member
                                        %102 = load %101 : s8i, align 1
                                        %103 = cast(integral) %102 : s32i
                                        %104 = load %76 : s32i, align 4
                                        %105 = const 30 : s32i
                                        %106 = add %104, %105 : s32i [nsw]
                                        cmp
                                        if %107 {
                                                %108 = get_global @abort : () -> void*
                                                call @abort() [all]
                                                yield
                                        }
                                        yield
                                }
                                scope {
                                        get_member
                                        %94 = load %93 : s8i, align 1
                                        %95 = cast(integral) %94 : s32i
                                        %96 = load %76 : s32i, align 4
                                        %97 = const 40 : s32i
                                        %98 = add %96, %97 : s32i [nsw]
                                        cmp
                                        if %99 {
                                                %100 = get_global @abort : () -> void*
                                                call @abort() [all]
                                                yield
                                        }
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        scope {
                %80 = alloca s64i, "x", align 8
                %81 = cast(array_to_ptrdecay) %77 : rec___va_list_tag*
                va_arg
                store %82, %80, align 8
                scope {
                        %83 = load %80 : s64i, align 8
                        %84 = const 123 : s64i
                        cmp
                        if %85 {
                                %86 = get_global @abort : () -> void*
                                call @abort() [all]
                                yield
                        }
                        yield
                }
                yield
        }
        %79 = cast(array_to_ptrdecay) %77 : rec___va_list_tag*
        va_end
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca rec_tiny, "coerce", align 4
        %1 = alloca rec_tiny, "coerce", align 4
        %2 = alloca rec_tiny, "coerce", align 4
        %3 = alloca s32i, "__retval", align 4
        %4 = alloca rec_tiny[3], "x", align 1
        %5 = const 0 : s32i
        store %5, %3
        %6 = const 10 : s8i
        %7 = const 0 : s64i
        get_element
        get_member
        store %6, %9, align 1
        %10 = const 11 : s8i
        %11 = const 1 : s64i
        get_element
        get_member
        store %10, %13, align 1
        %14 = const 12 : s8i
        %15 = const 2 : s64i
        get_element
        get_member
        store %14, %17, align 1
        %18 = const 20 : s8i
        %19 = const 0 : s64i
        get_element
        get_member
        store %18, %21, align 1
        %22 = const 21 : s8i
        %23 = const 1 : s64i
        get_element
        get_member
        store %22, %25, align 1
        %26 = const 22 : s8i
        %27 = const 2 : s64i
        get_element
        get_member
        store %26, %29, align 1
        %30 = const 30 : s8i
        %31 = const 0 : s64i
        get_element
        get_member
        store %30, %33, align 1
        %34 = const 31 : s8i
        %35 = const 1 : s64i
        get_element
        get_member
        store %34, %37, align 1
        %38 = const 32 : s8i
        %39 = const 2 : s64i
        get_element
        get_member
        store %38, %41, align 1
        %42 = const 40 : s8i
        %43 = const 0 : s64i
        get_element
        get_member
        store %42, %45, align 1
        %46 = const 41 : s8i
        %47 = const 1 : s64i
        get_element
        get_member
        store %46, %49, align 1
        %50 = const 42 : s8i
        %51 = const 2 : s64i
        get_element
        get_member
        store %50, %53, align 1
        %54 = const 3 : s32i
        %55 = const 0 : s64i
        get_element
        %57 = const 1 : s64i
        get_element
        %59 = const 2 : s64i
        get_element
        %61 = const 123 : s64i
        %62 = load %56 : rec_tiny, align 1
        %63 = load %58 : rec_tiny, align 1
        %64 = load %60 : rec_tiny, align 1
        store %62, %2
        %65 = cast(bitcast) %2 : u32i*
        %66 = load %65 : u32i
        store %63, %1
        %67 = cast(bitcast) %1 : u32i*
        %68 = load %67 : u32i
        store %64, %0
        %69 = cast(bitcast) %0 : u32i*
        %70 = load %69 : u32i
        call @f(%54, %66, %68, %70, %61) [all]
        %71 = get_global @exit : (s32i) -> void*
        %72 = const 0 : s32i
        call @exit(%72) [all]
        %73 = load %3 : s32i
        return %73
}
