clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__931004_2.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/931004-2.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn f(%arg0: s32i, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %38 = alloca s32i, "n", align 4
        %39 = alloca rec_tiny, "x", align 4
        %40 = alloca s32i, "i", align 4
        %41 = alloca rec___va_list_tag[1], "ap", align 16
        store %arg0, %38
        %42 = cast(array_to_ptrdecay) %41 : rec___va_list_tag*
        va_start
        scope {
                %51 = const 0 : s32i
                store %51, %40, align 4
                for cond {
                        %64 = load %40 : s32i, align 4
                        %65 = load %38 : s32i, align 4
                        cmp
                        condition %66
                } step {
                        %52 = load %40 : s32i, align 4
                        inc
                        store %53, %40, align 4
                        yield
                } body {
                        scope {
                                %54 = alloca rec_tiny, "vaarg.tmp", align 4
                                %55 = cast(array_to_ptrdecay) %41 : rec___va_list_tag*
                                va_arg
                                store %56, %54, align 4
                                copy
                                scope {
                                        get_member
                                        %58 = load %57 : s32i, align 4
                                        %59 = load %40 : s32i, align 4
                                        %60 = const 10 : s32i
                                        %61 = add %59, %60 : s32i [nsw]
                                        cmp
                                        if %62 {
                                                %63 = get_global @abort : () -> void*
                                                call @abort() [all]
                                                yield
                                        }
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        scope {
                %44 = alloca s64i, "x", align 8
                %45 = cast(array_to_ptrdecay) %41 : rec___va_list_tag*
                va_arg
                store %46, %44, align 8
                scope {
                        %47 = load %44 : s64i, align 8
                        %48 = const 123 : s64i
                        cmp
                        if %49 {
                                %50 = get_global @abort : () -> void*
                                call @abort() [all]
                                yield
                        }
                        yield
                }
                yield
        }
        %43 = cast(array_to_ptrdecay) %41 : rec___va_list_tag*
        va_end
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca rec_tiny, "coerce", align 4
        %1 = alloca rec_tiny, "coerce", align 4
        %2 = alloca rec_tiny, "coerce", align 4
        %3 = alloca s32i, "__retval", align 4
        %4 = alloca rec_tiny[3], "x", align 4
        %5 = const 0 : s32i
        store %5, %3
        %6 = const 10 : s32i
        %7 = const 0 : s64i
        get_element
        get_member
        store %6, %9, align 4
        %10 = const 11 : s32i
        %11 = const 1 : s64i
        get_element
        get_member
        store %10, %13, align 4
        %14 = const 12 : s32i
        %15 = const 2 : s64i
        get_element
        get_member
        store %14, %17, align 4
        %18 = const 3 : s32i
        %19 = const 0 : s64i
        get_element
        %21 = const 1 : s64i
        get_element
        %23 = const 2 : s64i
        get_element
        %25 = const 123 : s64i
        %26 = load %20 : rec_tiny, align 4
        %27 = load %22 : rec_tiny, align 4
        %28 = load %24 : rec_tiny, align 4
        store %26, %2
        %29 = cast(bitcast) %2 : s32i*
        %30 = load %29 : s32i
        store %27, %1
        %31 = cast(bitcast) %1 : s32i*
        %32 = load %31 : s32i
        store %28, %0
        %33 = cast(bitcast) %0 : s32i*
        %34 = load %33 : s32i
        call @f(%18, %30, %32, %34, %25) [all]
        %35 = get_global @exit : (s32i) -> void*
        %36 = const 0 : s32i
        call @exit(%36) [all]
        %37 = load %3 : s32i
        return %37
}
