clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__931004_3.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/931004-3.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn f(%arg0: s32i, %arg1: s16i, %arg2: s16i, %arg3: s16i, %arg4: s64i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s16i, %arg2: s16i, %arg3: s16i, %arg4: s64i):
        %38 = alloca s16i, "coerce", align 2
        store %arg3, %38
        %39 = cast(bitcast) %38 : rec_tiny*
        %40 = load %39 : rec_tiny
        %41 = alloca s16i, "coerce", align 2
        store %arg2, %41
        %42 = cast(bitcast) %41 : rec_tiny*
        %43 = load %42 : rec_tiny
        %44 = alloca s16i, "coerce", align 2
        store %arg1, %44
        %45 = cast(bitcast) %44 : rec_tiny*
        %46 = load %45 : rec_tiny
        %47 = alloca s32i, "n", align 4
        %48 = alloca rec_tiny, "x", align 2
        %49 = alloca rec_tiny, "y", align 2
        %50 = alloca rec_tiny, "z", align 2
        %51 = alloca s64i, "l", align 8
        store %arg0, %47
        store %46, %48
        store %43, %49
        store %40, %50
        store %arg4, %51
        scope {
                get_member
                %69 = load %68 : s16i, align 2
                %70 = cast(integral) %69 : s32i
                %71 = const 10 : s32i
                cmp
                if %72 {
                        %73 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                get_member
                %63 = load %62 : s16i, align 2
                %64 = cast(integral) %63 : s32i
                %65 = const 11 : s32i
                cmp
                if %66 {
                        %67 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                get_member
                %57 = load %56 : s16i, align 2
                %58 = cast(integral) %57 : s32i
                %59 = const 12 : s32i
                cmp
                if %60 {
                        %61 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %52 = load %51 : s64i, align 8
                %53 = const 123 : s64i
                cmp
                if %54 {
                        %55 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca rec_tiny, "coerce", align 2
        %1 = alloca rec_tiny, "coerce", align 2
        %2 = alloca rec_tiny, "coerce", align 2
        %3 = alloca s32i, "__retval", align 4
        %4 = alloca rec_tiny[3], "x", align 2
        %5 = const 0 : s32i
        store %5, %3
        %6 = const 10 : s16i
        %7 = const 0 : s64i
        get_element
        get_member
        store %6, %9, align 2
        %10 = const 11 : s16i
        %11 = const 1 : s64i
        get_element
        get_member
        store %10, %13, align 2
        %14 = const 12 : s16i
        %15 = const 2 : s64i
        get_element
        get_member
        store %14, %17, align 2
        %18 = const 3 : s32i
        %19 = const 0 : s64i
        get_element
        %21 = const 1 : s64i
        get_element
        %23 = const 2 : s64i
        get_element
        %25 = const 123 : s64i
        %26 = load %20 : rec_tiny, align 2
        %27 = load %22 : rec_tiny, align 2
        %28 = load %24 : rec_tiny, align 2
        store %26, %2
        %29 = cast(bitcast) %2 : s16i*
        %30 = load %29 : s16i
        store %27, %1
        %31 = cast(bitcast) %1 : s16i*
        %32 = load %31 : s16i
        store %28, %0
        %33 = cast(bitcast) %0 : s16i*
        %34 = load %33 : s16i
        call @f(%18, %30, %32, %34, %25) [all]
        %35 = get_global @exit : (s32i) -> void*
        %36 = const 0 : s32i
        call @exit(%36) [all]
        %37 = load %3 : s32i
        return %37
}
